# MonoPatcher

./: .gitignore  README.md
MonoPatcher/: Constants.cs  DLLEntryPoint.cs  ForceRecompilation.cs  LoadedPlugin.cs  Main.cs  MonoPatcher.cs  MonoPatcher.csproj  MonoPatcher.sln  PatchAttribute.cs  PluginAttribute.cs  ReflectionUtility.cs  ReplaceMethodAttribute.cs  ReplacePropertyAttribute.cs  TypePatchAttribute.cs  Utility.cs  Version.cs  XMLEntryPoint.cs
MonoPatcher.CPP/: CMakeLists.txt
MonoPatcher.CPP/include/: Addresses.h  Core.h  MonoHooks.h  mono.h  scan.h
MonoPatcher.CPP/include/Sims3/: ScriptHost.h
MonoPatcher.CPP/src/: Addresses.cpp  Core.cpp  GameAddresses.cpp  MonoHooks.cpp  dllmain.cpp  mono.cpp  scan.cpp
MonoPatcher.CPP/src/Sims3/: ScriptHost.cpp  mono.cpp
MonoPatcher/Internal/: Hooking.cs  ILGeneration.cs
MonoPatcher/Properties/: AssemblyInfo.cs
MonoPatcherCPP/: Core.cpp  Core.h  MonoPatcherCPP.sln  MonoPatcherCPP.vcxproj  MonoPatcherCPP.vcxproj.filters  ScriptHost.cpp  ScriptHost.h  dllmain.cpp
Package/: S3_0333406C_00000000_11643901F5C1C1C2_GameplayInitializers%%+_XML.xml
Samples/ClassPatch/: ClassPatch.csproj  ClassPatch.sln  Main.cs  SimPatch.cs
Samples/ClassPatch/Properties/: AssemblyInfo.cs
Samples/SamplePatches/: Main.cs  SamplePatches.csproj  SamplePatches.sln  SimPatch.cs
Samples/SamplePatches/Properties/: AssemblyInfo.cs
